# AI-Agent-

./: .gitignore  D1  README.md  day1.ipynb  day2.ipynb  explanation
app/: ingest.py  logs.py  requirements.txt  search_agent.py  search_tools.py  streamlit_app.py
course/: day1.ipynb  day5_evaluation_report.csv  evidently_chunks.json  pyproject.toml  section_chunks.json
course/logs/: docs_agent_ollama_20260527_081149_0924af.json  docs_agent_ollama_20260527_081301_d32f5f.json  docs_agent_ollama_20260527_081315_094d66.json  docs_agent_ollama_20260527_081336_e9b1a8.json  docs_agent_ollama_20260527_081339_a6bf06.json  docs_agent_ollama_20260527_081412_40e3c9.json  docs_agent_ollama_20260527_081428_b018d8.json  docs_agent_ollama_20260527_081453_c93c32.json  docs_agent_ollama_20260527_081512_9ce676.json  docs_agent_ollama_20260527_081519_710bdc.json  docs_agent_ollama_20260527_081548_717b79.json
