[project]
name = "course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "minsearch>=0.1.0",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pydantic-ai>=1.102.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
